# python_execution_test

./: .gitignore  docker-compose.yml
.devcontainer/: devcontainer.json  docker-compose.yml
app/: Dockerfile  StableLM_test.ipynb  pyproject.toml
