[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["None"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
accelerate = "^0.18.0"
bitsandbytes = "^0.38.1"
torch = "^2.0.0"
transformers = "^4.28.1"
flask = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
